<resources>
    <string name="app_name">Orange Forum</string>
    <string name="navigation_category">Category</string>
    <string name="navigation_board">Board</string>
    <string name="navigation_thread">Thread</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_queue">Queue</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_posting">Posting</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="fuck_warning">some image</string>
    <string name="btn_title_hide">Скрыть</string>
    <string name="btn_title_into">В тред</string>
    <string name="op_check">#OP</string>
    <string name="play_icon_description">Play icon</string>
    <string name="oppic_description">OpPic</string>
    <string name="missed_posts_title">Пропущено %1$d постов</string>
    <string name="posts_with_image">%1$d c картинками</string>
    <string name="response_form_option_hint">Опции</string>
    <string name="response_form_send_button_title">Отправить</string>
    <string name="response_form_choose_photo_button_title">Выбрать фото</string>
    <string name="response_form_comment_field_hint">Comment</string>
    <string name="search_hint">Поиск</string>
    <string name="thread_download_button">Download</string>
    <string name="thread_delete_button">Delete</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="refresh_thread">Refresh thread</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="settings">Settings</string>
    <string name="push_again_to_quit">Нажмите "Назад" еще раз, чтобы закрыть приложение</string>
    <string name="captcha">Captcha</string>
    <string name="sage">Sage</string>
    <string name="op">Op</string>
    <string name="subject">Subject</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="tag">Tag</string>
    <string name="icon">Icon</string>
    <string name="select_icon">Select Icon</string>


    <string name="permission_camera">Allow camera</string>
    <string name="permission_media">Allow media</string>
    <string name="permission_notifications">Allow notifications</string>



</resources>
