<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_settings_accent_24dp"
        android:title="@string/navigation_category"/>

    <item
        android:id="@+id/boardFragment"
        android:icon="@drawable/ic_settings_accent_24dp"
        android:title="@string/navigation_board" />

    <item
        android:id="@+id/threadFragment"
        android:icon="@drawable/ic_settings_accent_24dp"
        android:title="@string/navigation_thread"/>

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_settings_accent_24dp"
        android:title="@string/navigation_favorites"/>

    <item
        android:id="@+id/downloadFragment"
        android:icon="@drawable/ic_settings_accent_24dp"
        android:title="@string/navigation_downloaded"/>

</menu>