<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_small_8">

    <View
        android:id="@+id/v_favorite_post1_pic_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#30000000"
        android:visibility="gone"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small_8">


        <TextView
            android:id="@+id/tv_favorite_op_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_favorite_op_name"
            app:layout_constraintEnd_toStartOf="@+id/tv_favorite_op_datetime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/tv_favorite_op_name"
            app:layout_constraintTop_toTopOf="@id/tv_favorite_op_name"
            android:visibility="gone"
            android:text="@string/op_check"
            android:textColor="@color/color_accent"/>

        <TextView
            android:id="@+id/tv_favorite_op_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_favorite_op_check"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Аноним" />

        <TextView
            android:id="@+id/tv_favorite_op_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_favorite_op_check"
            app:layout_constraintEnd_toStartOf="@id/tv_favorite_op_num"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/tv_favorite_op_check"
            app:layout_constraintTop_toTopOf="@id/tv_favorite_op_check"
            tools:text="02/04/20 Чтв 15:49:23" />


        <TextView
            android:id="@+id/tv_favorite_op_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_favorite_op_datetime"
            app:layout_constraintEnd_toStartOf="@+id/iv_favorite_close_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/tv_favorite_op_datetime"
            app:layout_constraintTop_toTopOf="@id/tv_favorite_op_datetime"
            tools:text="#31231232" />

        <ImageView
            android:id="@+id/iv_favorite_close_button"
            app:layout_constraintTop_toTopOf="@id/tv_favorite_op_num"
            app:layout_constraintBottom_toBottomOf="@id/tv_favorite_op_num"
            app:layout_constraintStart_toEndOf="@id/tv_favorite_op_num"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:src="@drawable/ic_baseline_clear_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_favorite_op_pic"
            android:layout_width="@dimen/space_maximum_72"
            android:layout_height="@dimen/space_maximum_72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/spacing_normal_16"
            tools:src="@drawable/ic_launcher"
            android:contentDescription="@string/oppic_description" />


        <ImageView
            android:id="@+id/iv_favorite_play_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_play_arrow_white_27dp"
            app:layout_constraintStart_toStartOf="@id/iv_favorite_op_pic"
            app:layout_constraintTop_toTopOf="@id/iv_favorite_op_pic"
            android:layout_marginTop="6dp"
            android:layout_marginStart="5.5dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:contentDescription="@string/play_icon_description" />
        <ImageView
            android:id="@+id/iv_favorite_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/iv_favorite_op_pic"
            app:layout_constraintTop_toTopOf="@+id/iv_favorite_op_pic"
            app:srcCompat="@drawable/ic_play_arrow_accent_24dp"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginStart="@dimen/spacing_small_8"
            android:visibility="gone"
            tools:visibility="visible"
            android:contentDescription="@string/play_icon_description" />

        <TextView
            android:id="@+id/tv_favorite_op_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:paddingStart="@dimen/font_normal_16"
            android:paddingEnd="@dimen/spacing_small_8"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_favorite_op_pic"
            app:layout_constraintEnd_toEndOf="@+id/br_short_icons"
            app:layout_constraintStart_toEndOf="@+id/iv_favorite_op_pic"
            app:layout_constraintTop_toTopOf="@+id/iv_favorite_op_pic"
            tools:text="@string/lorem" />

        <ImageView
            android:id="@+id/ic_short_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_download_accent_24"
            android:layout_margin="@dimen/spacing_small_8"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@+id/tv_favorite_op_subject"
            app:layout_constraintBottom_toTopOf="@+id/ic_short_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"/>

        <ImageView
            android:id="@+id/ic_short_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border_accent_24dp"
            android:layout_margin="@dimen/spacing_small_8"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/ic_short_download"
            app:layout_constraintBottom_toBottomOf="@+id/tv_favorite_op_subject"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/br_short_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:barrierDirection="start"
            app:constraint_referenced_ids="ic_short_favorite, ic_short_download"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>